<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bckgr"
    android:paddingBottom="4dp">

    <!--Teams names bar-->

    <LinearLayout
        android:id="@+id/teamsNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="16dp">

        <!--Team A Name -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/team_a_name"
                style="@style/teamsNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:freezesText="true"
                android:text="@string/team_a_name" />
        </LinearLayout>

        <!--Team B Name -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.udacityscore.MainActivity">

            <TextView
                android:id="@+id/team_b_name"
                style="@style/teamsNames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:freezesText="true"
                android:text="@string/team_b_name" />
        </LinearLayout>
    </LinearLayout>

    <!-- Teams names and scores fields -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/teamsNames"
        android:baselineAligned="false"
        android:orientation="horizontal">


        <!-- Team A layout -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.udacityscore.MainActivity">

            <EditText
                android:id="@+id/team_a_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/hintInInput"
                android:padding="8dp" />

            <Button
                android:id="@+id/team_a_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/score_button"
                android:text="@string/saveButton" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/scoreValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/score_button"
                android:onClick="plusThreeA"
                android:text="@string/plusThree" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/score_button"
                android:onClick="plusTwoA"
                android:text="@string/plusTwo" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/score_button"
                android:onClick="FreeDrawA"
                android:text="@string/plusOne" />


        </LinearLayout>

        <!-- Team B layout -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:context="com.example.android.courtcounter.MainActivity">

            <EditText
                android:id="@+id/team_b_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="@string/hintInInput"
                android:padding="8dp" />

            <Button
                android:id="@+id/team_b_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/score_button"
                android:text="@string/saveButton" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/scoreValues"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="16dp"
                android:text="@string/score" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/score_button"
                android:onClick="plusThreeB"
                android:text="@string/plusThree" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/score_button"
                android:onClick="plusTwoB"
                android:text="@string/plusTwo" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/score_button"
                android:onClick="FreeDrawB"
                android:text="@string/plusOne" />


        </LinearLayout>

    </LinearLayout>
    <!-- Reset and Undo buttons -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/score_button"
        android:onClick="Undo"
        android:text="@string/undoButton" />

    <Button
        style="@style/resetButton"
        android:layout_width="55dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="4dp"
        android:background="@drawable/score_button"
        android:onClick="Reset"
        android:text="@string/resetButton" />
</RelativeLayout>

